# pwdgen

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
inc/: pw.h
src/: main.c  pw.c
